<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey2"
    tools:context=".ChoiceDirectionFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="38dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_rounded_16"
        android:backgroundTint="@color/grey5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/grey3"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_from"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_cargo_airplane"
                android:drawablePadding="8dp"
                android:hint="@string/from_moscow" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_to"
                    style="@style/style_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="8dp"
                    android:hint="@string/to_turkey" />

                <ImageButton
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_cancel"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:id="@+id/btn_hard_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/background_rounded_8"
                android:backgroundTint="@color/green"
                android:padding="12dp"
                android:src="@drawable/ic_roads" />

            <TextView
                style="@style/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/hard_route"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_anywhere"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/background_rounded_8"
                android:backgroundTint="@color/blue"
                android:padding="12dp"
                android:src="@drawable/ic_network" />

            <TextView
                style="@style/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/Anywhere"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_weekend"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/background_rounded_8"
                android:backgroundTint="@color/dark_blue"
                android:padding="12dp"
                android:src="@drawable/ic_calendar" />

            <TextView
                style="@style/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/weekend"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_hot_ticket"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/background_rounded_8"
                android:backgroundTint="@color/red"
                android:padding="12dp"
                android:src="@drawable/ic_fire" />

            <TextView
                style="@style/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/hot_ticket"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_direction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="8dp"
        android:background="@drawable/background_rounded_16"
        android:backgroundTint="@color/grey3"
        tools:listitem="@layout/item_direction"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>